--- a/dbasik/register/templates/register/project_detail.html
+++ b/dbasik/register/templates/register/project_detail.html
@@ -4,64 +4,81 @@
 
 {% block content %}
 
-    <div>
-        <h2>{{ object.name }} ({{ object.tier }} - {{ object.project_type }})</h2>
-        <!--{% if object.dependencies %}-->
-            <!--<p class="w-75 p-3 border">{{ object.dependencies }}</p>-->
-        <!--{% else %}-->
-            <!--<p>There are no dependencies for this Project.</p>-->
-        <!--{% endif %}-->
-        <!--</div>-->
-        <div style="padding: 2px;">
-        {{ dft_group }}
-        {{ dft_division }}
-        </div>
-        <div style="margin-top: 20px;">
-            <strong>SRO</strong>:<br>
-            - {{ sro_full_name }}
-        </div>
+<div class="w3-container">
+    <h2>{{ object.name }} ({{ object.tier }} - {{ object.project_type }})</h2>
+    <h3>Project Summary</h3>
+            <table class="w3-table-all">
+                <tr>
+                    <td><strong>Stage:</strong></td>
+                    <td>{{ object.stage }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Start Date:</strong></td>
+                    <td>{{ object.start_date|date:"j M Y" }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Planned End Date:</strong>{{ object.planned_end_date|date:"j M Y" }}</td>
+                </tr>
+            </table>
+    <h3>Description</h3>
+    <div class="w3-panel w3-border">
         <div>
-            <strong>Working Contact:</strong><br>
-            - {{ working_contact }} (Tel: {{ working_contact_phone }})
+            {{ dft_group|default:"[- No DfT Group Given -]" }} |
+            {{ dft_division|default:"[- No DfT Division Given -]"  }}
         </div>
-
-        <table class="table-light">
-           <tr>
-            <td class="row-light"><strong>Stage:</strong></td>
-            <td class="row-light">{{ object.stage }}</td>
-           </tr>
-           <tr>
-            <td class="row-light"><strong>Start Date:</strong></td>
-            <td class="row-light">{{ object.start_date|date:"j M Y" }}</td>
-           </tr>
-           <tr>
-           <td class="row-light"><strong>Planned End Date:</strong>{{ object.planned_end_date|date:"j M Y" }}</td>
-           </tr>
-        </table>
-        
-        <h3>Returns</h3>
-
-        {% if returns %}
-            {% for r in returns  %}
-                <h4>{{ r }}</h4>
-                <table>
-                    <tr>
-                        <td><strong>Current RAG:</strong></td>
-                        <td style="background: #{{ r.rag_c }}"><span style="color: white">{{ r.rag }}</span></td>
-                    </tr> 
-                    <tr>
-                        <td><strong>DCA Narrative:</strong></td>
-                        <td> {{ r.dca_narrative }}</td>
-                    </tr>
-                </table>
-            {% endfor %}
-        {% else %}
-            <div>Key Data - no current return</div>
-        {% endif %}
-        <div>
-
-        <a class="button" href="{% url 'register:project_update' object.slug %}">Edit</a>
-        <a class="button danger" href="{% url 'register:project_delete' object.slug %}">Delete</a>
-        </div>
+        <p>{% lorem %} </p> 
     </div>
-{% endblock %}
+    <div class="w3-panel w3-border">
+
+        <div class="w3-cell-row">
+            <div class="w3-container w3-cell">
+                <h3>Key Contacts</h3>
+                    <div class="w3-border">
+                        <header class="w3-container">
+                            <h4>SRO:</h4>
+                            <p> {{ sro_full_name|default:"[ - No SRO Given -]" }}</p>
+                        </header>
+                    </div>
+                    <div class="w3-border">
+                        <header class="w3-container">
+                            <h4>Working Contact:</h4>
+                            <p>{{ working_contact|default:"[ - No Working Contact Given -]"  }} (Tel: {{ working_contact_phone|default:"[ - No Working Contact Phone Given -]"  }})</p>
+                        </header>
+                    </div>
+            </div>  
+
+            <div class="w3-container w3-cell">
+            <h3>Returns</h3>
+
+            {% if returns %}
+                {% for r in returns  %}
+                <div class="w3-panel w3-border">
+                <a href="{% url 'returns:return_data' r.pk %}">{{ r }}</a>
+                    <table>
+                        <tr>
+                            <td><strong>Current RAG:</strong></td>
+                            <td style="background: #{{ r.rag_c }}"><span style="color: white">{{ r.rag }}</span></td>
+                        </tr> 
+                        <tr>
+                            <td><strong>DCA Narrative:</strong></td>
+                            <td> {{ r.dca_narrative }}</td>
+                        </tr>
+                    </table>
+                </div>
+                {% endfor %}
+                {% else %}
+                <div>Key Data - no current return</div>
+            {% endif %}
+            </div>
+        </div>
+
+
+
+
+            <div>
+
+                <a class="button" href="{% url 'register:project_update' object.slug %}">Edit</a>
+                <a class="button danger" href="{% url 'register:project_delete' object.slug %}">Delete</a>
+            </div>
+        </div>
+        {% endblock %}
