--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" href="{% static 'core/site.css' %}"/>
@@ -14,13 +13,13 @@
     {% block extra_head_tags %}{% endblock %}
 </head>
 
-<nav class="w3-bar w3-teal w3-padding-16">
-  <a href="{% url 'index' %}" class="w3-bar-item w3-xxlarge">dbasik</a>
+<nav>
+  <a href="{% url 'index' %}">dbasik</a>
       {% if request.user.is_authenticated %}
-          <a class="w3-bar-item" href="#">{{ user }}</a>
-          <a class="w3-bar-item" href="{% url 'logout' %}">Log Out</a>
+          <a href="#">{{ user }}</a>
+          <a href="{% url 'logout' %}">Log Out</a>
       {% else %}
-          <a class="w3-bar-item" href="{% url 'login' %}">Log In</a>
+          <a href="{% url 'login' %}">Log In</a>
       {% endif %}
 </nav>
 
