--- a/dbasik/core/templates/registration/login.html
+++ b/dbasik/core/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="w3-container">
+<div>
   {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
@@ -18,23 +18,23 @@
 
   <form method="post" action="{% url 'login' %}">
   {% csrf_token %}
-  <div class="form-group">
+  <div>
       {{ form.username.label_tag }}
       {{ form.username }}
   </div>
 
-  <div class="form-group">
+  <div >
       {{ form.password.label_tag }}
       {{ form.password }}
   </div>
 
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" value="login">Log In</button>
+  <div >
+    <button type="submit" >Log In</button>
   </div>
   <input type="hidden" name="next" value="{{ next }}">
   </form>
 
-  <div class="form-group">
+  <div>
     {# Assumes you set up the password_reset view in your URLconf #}
       <a href="{% url 'password_reset' %}">Lost password?</a>
   </div>
