--- a/dbasik/datamap/templates/datamap/datamap_detail.html
+++ b/dbasik/datamap/templates/datamap/datamap_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="w3-container">
+<div>
     <div>
         <p><strong>WARNING:</strong> The <strong>Data Type</strong>, <strong>Max Length</strong> and <strong>Required</strong> fields are not currently 
             implemented. They will be in a future verison.</p>
@@ -13,7 +13,7 @@
         {% if messages %}
         <ul>
             {% for message in messages %}
-            <div id="message-test" class="alert alert-dismissible alert-danger">
+            <div id="message-test">
                 {{ message }}
             </div>
             {% endfor %}
@@ -23,7 +23,7 @@
 
 
     <h3>{{ dm_name }} </h3>
-    <table class="w3-table-all">
+    <table>
         <thead>
             <tr>
                 <th>Key</th>
@@ -45,11 +45,11 @@
                 <td>{{ line.required }}</td>
                 <td>{{ line.sheet }}</td>
                 <td>{{ line.cell_ref }}</td>
-                <td class="text-right">
-                    <a class="btn btn-primary mx-1 px-1" href="{% url 'datamaps:datamapline_update' line.id %}">Edit</a>
+                <td>
+                    <a href="{% url 'datamaps:datamapline_update' line.id %}">Edit</a>
                 </td>
-                <td class="text-right">
-                    <a class="btn btn-danger mx-1 px-1" href="{% url 'datamaps:datamapline_delete' line.id %}">DELETE</a>
+                <td>
+                    <a href="{% url 'datamaps:datamapline_delete' line.id %}">DELETE</a>
                 </td>
             </tr>
             {% endfor %}
@@ -58,11 +58,11 @@
 
 
 
-    <div class="buttonHolder">
-        <a class="button" id="add-line-to-datamap-button"  href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
-        <a class="button" id="edit-datamap-button" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
-        <a class="button" id="upload-csv-button" href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
-        <a class="button" id="delete-datamap-button" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
+    <div>
+        <a href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
+        <a href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
+        <a href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
+        <a href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
     </div>
 </div>
 </div>
