--- a/dbasik/register/templates/register/project_detail.html
+++ b/dbasik/register/templates/register/project_detail.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-<div class="w3-container">
+<div >
     <h2>{{ object.name }} ({{ object.tier }} - {{ object.project_type }})</h2>
     <h3>Project Summary</h3>
-            <table class="w3-table-all">
+            <table >
                 <tr>
                     <td><strong>Stage:</strong></td>
                     <td>{{ object.stage }}</td>
@@ -21,38 +21,38 @@
 {#                </tr>#}
             </table>
     <h3>Description</h3>
-    <div class="w3-panel w3-border">
+    <div >
         <div>
             {{ dft_group|default:"[- No DfT Group Given -]" }} |
             {{ dft_division|default:"[- No DfT Division Given -]"  }}
         </div>
         <p>{% lorem %} </p> 
     </div>
-    <div class="w3-panel w3-border">
+    <div >
 
-{#        <div class="w3-cell-row">#}
-{#            <div class="w3-container w3-cell">#}
+{#        <div >#}
+{#            <div >#}
 {#                <h3>Key Contacts</h3>#}
-{#                    <div class="w3-border">#}
-{#                        <header class="w3-container">#}
+{#                    <div >#}
+{#                        <header >#}
 {#                            <h4>SRO:</h4>#}
 {#                            <p> {{ sro_full_name|default:"[ - No SRO Given -]" }}</p>#}
 {#                        </header>#}
 {#                    </div>#}
-{#                    <div class="w3-border">#}
-{#                        <header class="w3-container">#}
+{#                    <div >#}
+{#                        <header >#}
 {#                            <h4>Working Contact:</h4>#}
 {#                            <p>{{ working_contact|default:"[ - No Working Contact Given -]"  }} (Tel: {{ working_contact_phone|default:"[ - No Working Contact Phone Given -]"  }})</p>#}
 {#                        </header>#}
 {#                    </div>#}
 {#            </div>  #}
 
-            <div class="w3-container w3-cell">
+            <div >
             <h3>Returns</h3>
 
             {% if returns %}
                 {% for r in returns  %}
-                <div class="w3-panel w3-border">
+                <div >
                 <a href="{% url 'returns:return_data' r.pk %}">{{ r }}</a>
                     <table>
                         <tr>
@@ -77,8 +77,8 @@
 
             <div>
 
-                <a class="button" href="{% url 'register:project_update' object.slug %}">Edit</a>
-                <a class="button danger" href="{% url 'register:project_delete' object.slug %}">Delete</a>
+                <a>Edit</a>
+                <a>Delete</a>
             </div>
         </div>
         {% endblock %}
