--- a/dbasik/templates/templates/templates/template_confirm_delete.html
+++ b/dbasik/templates/templates/templates/template_confirm_delete.html
@@ -4,13 +4,13 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
+<div>
+    <div>
         <form method="post" accept-charset="utf-8">{% csrf_token %}
             Are you sure you want to delete "{{ object }}"?
-            <div class="buttonHolder p-1">
-                <button class="btn btn-danger" type="submit" value="Submit" name="submit" id="submit-button"/>Yes</button>
-                <a href="{% url 'templates:list' %}" class="btn btn-primary">Cancel</a> 
+            <div>
+                <button/>Yes</button>
+                <a href="{% url 'templates:list' %}">Cancel</a> 
             </div>
         </form>
     </div>    
