--- a/dbasik/templates/templates/templates/template_update.html
+++ b/dbasik/templates/templates/templates/template_update.html
@@ -6,9 +6,9 @@
 {% block title %}Edit template{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6">
+<div>
+    <div>
+        <div>
             {% crispy form %}
         </div>
     </div>
