--- a/dbasik/register/templates/register/project_create.html
+++ b/dbasik/register/templates/register/project_create.html
@@ -7,25 +7,27 @@
 
 {% block content %}
 
-<div class="wrapper">
+<div class="left-panel">
+    <p>Current projects:</p>
+    <ul>
+        <li>Bobbins</li>
+        <li>Nope</li>
+    </ul>
+</div>
+<div class="right-panel">
     <div>
-        <div>
-            {% crispy form %}
-        </div>
-
-        <div>
-            <div>
-                <div >Current Projects in system</div>
-                <div >
-                    {% for item in existing_objects %}
-                    <ul id="current-datamap-list" >
-                        <li>{{ item }}</a></li>
-                    </ul>
-                    {% endfor %}
-                </div> 
-            </div>
-        </div>
+        {% crispy form %}
     </div>
 
+    <div>
+        <div>Current Projects in system</div>
+        <div>
+            {% for item in existing_objects %}
+            <ul id="current-datamap-list" >
+                <li>{{ item }}</a></li>
+            </ul>
+            {% endfor %}
+        </div> 
+    </div>
 </div>
 {% endblock %}
