--- a/dbasik/datamap/templates/datamap/datamap_create.html
+++ b/dbasik/datamap/templates/datamap/datamap_create.html
@@ -6,27 +6,26 @@
 {% block title %}Create datamap{% endblock %}
 
 {% block content %}
-    <div style="margin: 10px 0px; 10px 0px;">
-        <h3>Instructions</h3>
-        <p>Datamaps are used for this and that. They are very useful for certain things.
-            Think about that - VERY useful for certain things.</p>
 
-        <p>Use the <strong>Create a new Datamap</strong> form below to upload a CSV file 
-            into the system.</p>
-
-    </div>
-<div id="new-datamap-form">
-    {% crispy form %}
-</div>
-
-<div class="flex-container">
-    <div id="callout-box">
-        <strong>Current datamaps in system</strong>
-        {% for item in existing_objects %}
-        <ul>
-            <li><a href="{%  url 'datamaps:datamap_detail' item.slug %}">{{ item.name }}</a></li>
-        </ul>
-        {% endfor %}
-    </div>
+<div class="left-panel">
+    <strong>Current datamaps in system</strong>
+    {% for item in existing_objects %}
+    <ul>
+        <li><a href="{%  url 'datamaps:datamap_detail' item.slug %}">{{ item.name }}</a></li>
+    </ul>
+    {% endfor %}
 </div>
 {% endblock %}
+
+<div class="right-panel">
+    <h3>Instructions</h3>
+    <p>Datamaps are used for this and that. They are very useful for certain things.
+    Think about that - VERY useful for certain things.</p>
+
+    <p>Use the <strong>Create a new Datamap</strong> form below to upload a CSV file 
+    into the system.</p>
+</div>
+
+<div>
+    {% crispy form %}
+</div>
