--- a/dbasik/datamap/templates/datamap/datamap_detail.html
+++ b/dbasik/datamap/templates/datamap/datamap_detail.html
@@ -21,8 +21,10 @@
     {% endif %}
 
 
-    <h3>{{ dm_name }} </h3>
-    <table>
+    <div style="border-bottom: 1px solid darkgray; margin-right: 10px">
+        <h3>{{ dm_name }} </h3>
+    </div>
+    <table style="margin-right: 10px;">
         <thead>
             <tr>
                 <th>Key</th>
